<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ErrorMessagesActivity"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/splash_logo_width"
        android:layout_height="@dimen/splash_logo_height"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_white_cropped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleText_error_message_activity"
        android:text="@string/weather_app_is_unavailable"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_error_message_activity"
        android:fontFamily="@font/sourcesanspro_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="@dimen/body_text_width_error_message_activity"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margineTop_bodyText_error_message_activity"
        android:text="@string/weather_app_requires_permission_to_access_your_current_location_you_can_turn_this_function_on_in_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/body_text_error_message_activity"
        android:textAlignment="center"
        android:fontFamily="@font/sourcesanspro_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/transparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_btnSettings_error_message_activity"
        android:layout_marginEnd="@dimen/margineEnd_btnSettings_error_message_activity"
        android:text="@string/go_to_settings"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>