<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/width_customDialog"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_shape" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/dialog_message"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_txtDia_customDialog"
        android:fontFamily="@font/sourcesanspro_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            style="@style/transparentButton"
            android:layout_width="@dimen/width_btnYes_customDialog"
            android:layout_height="@dimen/height_btnYes_customDialog"
            android:layout_marginTop="@dimen/marginTop_btnYes_customDialog"
            android:paddingTop="@dimen/paddingTop_btnYes_customDialog"
            android:paddingBottom="@dimen/paddingBottom_btnYes_customDialog"
            android:paddingStart="@dimen/paddingStart_btnYes_customDialog"
            android:paddingEnd="@dimen/paddingEnd_btnYes_customDialog"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/allow"
            android:textColor="@color/Sunrise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_dia"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_no"
        style="@style/transparentButton"
        android:layout_width="@dimen/width_btnNo_customDialog"
        android:layout_height="@dimen/height_btnNo_customDialog"
        android:paddingTop="@dimen/paddingTop_btnNo_customDialog"
        android:paddingBottom="@dimen/paddingBottom_btnNo_customDialog"
        android:paddingStart="@dimen/paddingStart_btnNo_customDialog"
        android:paddingEnd="@dimen/paddingEnd_btnNo_customDialog"
        android:layout_marginTop="@dimen/marginTop_btnNo_customDialog"
        android:layout_marginEnd="@dimen/marginEnd_btnNo_customDialog"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/deny"
        android:textColor="@color/Sunrise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_yes"
        app:layout_constraintTop_toBottomOf="@id/txt_dia" />

</androidx.constraintlayout.widget.ConstraintLayout>
